fixed types and align

--- a/app/static/scss/_extend.scss
+++ b/app/static/scss/_extend.scss
@@ -3,5 +3,8 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
-    width:auto;
+    width:100%;
+    h2 {
+        text-align:center;
+    }
 }
